# The-Forge

./: .cmake-format.py  .gitignore  CMakeLists.txt  README.md  conanfile.py
Common_3/Application/: Config.h  InputSystem.cpp  Screenshot.cpp
Common_3/Application/Fonts/: FontSystem.cpp
Common_3/Application/Interfaces/: IInput.h
Common_3/Application/Profiler/: ProfilerBase.cpp
Common_3/Application/UI/: UI.cpp
Common_3/Game/Scripting/: LuaSystem.cpp
Common_3/Graphics/: GraphicsConfig.h
Common_3/Graphics/Direct3D11/: Direct3D11.cpp
Common_3/Graphics/Direct3D12/: Direct3D12.cpp  Direct3D12Config.h
Common_3/Graphics/Metal/: MetalConfig.h
Common_3/Graphics/Vulkan/: VulkanConfig.h
Common_3/IDE/XCode Build Configs/: CommonSettings.xcconfig
Common_3/OS/Darwin/: iOSAppDelegate.m  macOSAppDelegate.h  macOSAppDelegate.m
Common_3/OS/Interfaces/: IOperatingSystem.h
Common_3/OS/WindowSystem/: WindowSystem.cpp
Common_3/OS/Windows/: WindowsBase.cpp  WindowsFileSystem.cpp  WindowsToolsFileSystem.cpp
Common_3/Resources/ResourceLoader/: ResourceLoader.cpp
Common_3/Tools/AssetPipeline/Apple/AssetPipelineCmd.xcodeproj/: project.pbxproj
Common_3/Tools/AssetPipeline/Win64/: AssetPipelineCmd.vcxproj
Common_3/Tools/AssetPipeline/src/: AssetPipeline.cpp  AssetPipelineCmd.cpp  AssetPipeline_Textures.cpp
Common_3/Tools/BunyArchive/VisualStudio/: BunyLib.vcxproj  BunyTool.vcxproj
Common_3/Tools/ForgeShadingLanguage/: compilers.py  fsl.py  utils.py
Common_3/Tools/ReloadServer/: ReloadClient.cpp
Common_3/Tools/UIRemoteControl/PC Visual Studio 2019/: UIRemoteControl.vcxproj
Common_3/Utilities/Interfaces/: IFileSystem.h
Common_3/Utilities/Math/: MathTypes.h
Examples_3/Aura/PC Visual Studio 2019/: Aura.vcxproj
Examples_3/Ephemeris/PC Visual Studio 2019/: Ephemeris.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/01_Transformations/: 01_Transformations.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/03_MultiThread/: 03_MultiThread.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/06_MaterialPlayground/: 06_MaterialPlayground.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/09_LightShadowPlayground/: 09_LightShadowPlayground.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/10_ScreenSpaceReflections/: 10_ScreenSpaceReflections.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/12_ZipFileSystem/: 12_ZipFileSystem.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/14_WaveIntrinsics/: 14_WaveIntrinsics.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/15_Transparency/: 15_Transparency.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/15a_VisibilityBufferOIT/: 15a_VisibilityBufferOIT.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/16_Raytracing/: 16_Raytracing.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/17_EntityComponentSystem/: 17_EntityComponentSystem.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/19_CodeHotReload/: 19_CodeHotReload_Main.vcxproj  19a_CodeHotReload_Game.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/21_Animations/: 21_Animations.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/28_Skinning/: 28_Skinning.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/34_Input/: 34_Input.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/35_VariableRateShading/: 35_VariableRateShading.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/36_AlgorithmsAndContainers/: 36_AlgorithmsAndContainers.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/Libraries/OS/: OS.vcxproj
Examples_3/Unit_Tests/Android_VisualStudio2019/Libraries/Renderer/: Renderer.vcxproj
Examples_3/Unit_Tests/PC Visual Studio 2019/: 01_Transformations.vcxproj  03_MultiThread.vcxproj  06_MaterialPlayground.vcxproj  09_LightShadowPlayground.vcxproj  09a_HybridRaytracing.vcxproj  10_ScreenSpaceReflections.vcxproj  11_LinkedMultiGPU.vcxproj  11a_UnlinkedMultiGPU.vcxproj  12_ZipFileSystem.vcxproj  14_WaveIntrinsics.vcxproj  15_Transparency.vcxproj  15a_VisibilityBufferOIT.vcxproj  16_Raytracing.vcxproj  17_EntityComponentSystem.vcxproj  19_CodeHotReload_Main.vcxproj  19a_CodeHotReload_Game.vcxproj  21_Animations.vcxproj  28_Skinning.vcxproj  34_Input.vcxproj  35_VariableRateShading.vcxproj  36_AlgorithmsAndContainers.vcxproj
Examples_3/Unit_Tests/PC Visual Studio 2019/Libraries/OS/: OS.vcxproj
Examples_3/Unit_Tests/PC Visual Studio 2019/Libraries/Renderer/: Renderer.vcxproj
Examples_3/Unit_Tests/PC Visual Studio 2019/Libraries/Tools/: SpirvCross.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/01_Transformations/: 01_Transformations.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/03_MultiThread/: 03_MultiThread.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/06_MaterialPlayground/: 06_MaterialPlayground.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/09_LightShadowPlayground/: 09_LightShadowPlayground.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/10_ScreenSpaceReflections/: 10_ScreenSpaceReflections.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/12_ZipFileSystem/: 12_ZipFileSystem.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/14_WaveIntrinsics/: 14_WaveIntrinsics.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/15_Transparency/: 15_Transparency.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/17_EntityComponentSystem/: 17_EntityComponentSystem.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/19_CodeHotReload/: 19_CodeHotReload_Main.vcxproj  19a_CodeHotReload_Game.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/21_Animations/: 21_Animations.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/28_Skinning/: 28_Skinning.vcxproj
Examples_3/Unit_Tests/Quest_VisualStudio2019/Libraries/OS/: OS.vcxproj
Examples_3/Unit_Tests/src/: CMakeLists.txt
Examples_3/Unit_Tests/src/01_Transformations/: CMakeLists.txt
Examples_3/Unit_Tests/src/36_AlgorithmsAndContainers/: AlgorithmsTest.c
Examples_3/Visibility_Buffer/PC Visual Studio 2019/: Visibility_Buffer.vcxproj
cmake/: TheForgeUtils.cmake
(+6 files in other folders)
